# polyglot-ui

./: .gitignore  README.md  audio_player.py  audio_processor.py  config.json  main.py  pyproject.toml  request_handler.py  requirements.txt  test_recorder.py
audio/: audio_player.py  audio_processor.py  audio_utils.py
config/: config.json  config.py  logger.py
gui/: colors.py  main_menu.py  splash_screen.py  styles.py
network/: request_handler.py
screens/: main_menu.py  splash_screen.py
src/polyglot_tkinter_app/: __init__.py  languages.py  logging_config.py  main.py  paths.py
src/polyglot_tkinter_app/api/: __init__.py  client.py  models.py
src/polyglot_tkinter_app/app/: bootstrap.py
src/polyglot_tkinter_app/audio/: __init__.py  capture.py  devices.py  playback.py  vad.py  wav_io.py
src/polyglot_tkinter_app/gui/: main_menu.py  splash_screen.py  styles.py
src/polyglot_tkinter_app/orchestration/: __init__.py  translation_flow.py
src/polyglot_tkinter_app/settings/: __init__.py  loader.py  models.py
tests/: pytest.ini  test_audio_player.py  test_audio_processor.py  test_audio_utils.py
tests/integration/: test_local_backend_cache.py
tests/performance/: performance_test.py
tests/unit/: test_api_client.py  test_audio_devices.py  test_playback.py  test_settings.py  test_translation_flow.py
utils/: audio_utils.py  constants.py  request_handler.py
