[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "polyglot-tkinter-app"
version = "2.0.0"
description = "Tkinter client for Polyglot speech-to-speech translation demos"
requires-python = ">=3.10"
dependencies = [
  "numpy",
  "pillow",
  "PyAudio",
  "pystray",
  "requests",
  "sounddevice",
  "sv-ttk",
  "urllib3",
  "webrtcvad",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests/unit"]
filterwarnings = [
  "ignore::DeprecationWarning",
  "ignore::UserWarning",
  "ignore::FutureWarning",
  "error::RuntimeWarning",
]
markers = [
  "integration: tests that require a running Polyglot backend",
]
